kustomize/base/auth-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth-service
  labels:
    app.kubernetes.io/part-of: forgeops
